# semi-auto-probe

./: .gitignore  README.md  last_autofocus_history.csv  pyproject.toml  requirements.txt  restart_web.bat
References/: Comm Protocal.txt
assets/: mark_writefield_array_10mm_1000um_FET_v2.gds
docs/: agent-execution-spec.md  agent-function-spec.md  web-deploy.md
src/semi_auto_probe/: __init__.py  af_plane.py  agent.py  app.py  camera.py  cli.py  config.py  focusmap_3d.py  gds_stage_mapper.py  img_matrix.py  img_stitch.py  logging_utils.py  monitor_feed.py  protocol.py  serial_client.py  web_app.py
src/semi_auto_probe/ui/: __init__.py  agent_panel.py  calibration_dialog.py  vision.py
src/semi_auto_probe/web/: restart_web.ps1  restart_web_silent.vbs  web_tray.ps1  web_tray_silent.vbs
src/semi_auto_probe/web/static/: app.js  index.html  styles.css
tests/: test_af_plane.py  test_agent_planner.py  test_autofocus_logic.py  test_config.py  test_exclusive_serial_workflows.py  test_focus_processing_gate.py  test_gds_stage_mapper.py  test_img_matrix.py  test_img_stitch.py  test_imgstack_acquisition.py  test_imgstitch_array_geometry.py  test_imgstitch_settle.py  test_keyboard_controls.py  test_protocol.py  test_serial_client.py  test_vision_center_move.py
